# mechanicsdsl

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODEBASE_COMPREHENSIVE_ANALYSIS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPC_PROGRAM_SUMMARY.md  DEMO.md  Dockerfile  GALLERY.md  LICENSE  MAINTENANCE.md  MechanicsDSL_Summary_Logbook.txt  PROJECT_BRIEF.md  Possibility Space for MechanicsDSL.md  README.md  RELEASE_NOTES_v1.6.0.md  SECURITY.md  SECURITY_POLICY.md  TECHNICAL_SUMMARY.md  api.py  app.py  core.py  cover_letter_cpc.tex  dam_break  dam_break.cpp  dam_break_sph.csv  demo.py  deps.json  docker-compose.gpu.yml  docker-compose.yml  dockerfile  generate_paper_figures.py  marble_launcher_all_settings.csv  mcmc_whitepaper.tex  mechanics_dsl_v5.py  mechanics_dsl_v6.py  (+17 more)
.devcontainer/: .devcontainer.json  Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
assets/: README.md
benchmarks/: __init__.py  benchmark_arm.py  codegen_benchmarks.py  comparison_matrix.py  core_benchmarks.py  cuda_performance.py  memory_benchmarks.py  numba_performance.py  quick_benchmark.py  report.py  runner.py
binder/: environment.yml
completions/: README.md
conda-recipe/: README.md  meta.yaml
contrib/: README.md
demos/: EXPECTED_OUTPUT.md  generate_all.py
docs/: advanced.rst  arm_optimization.md  changelog.rst  code_generator.rst  compiler_architecture.rst  conf.py  constraint_physics.rst  embedded_(arduino).rst  enterprise_deployment.md  fluid_dyanmics.rst  index.rst  installation.rst  lagrangian_mechanics.rst  mechanics_dsl.rst  physics_background.rst  quickstart.rst  requirements.txt  standard_c++.rst  tutorials.rst  user_guide.rst  web_assembly.rst
examples/: 01_getting_started.py  022_advanced_targets.py  02_harmonic_oscillator.py  03_simple_pendulum.py  04_plotting_basics.py  05_double_pendulum.py  06_coupled_oscillators.py  07_2d_motion.py  08_damped_systems.py  09_forced_oscillators.py  10_3d_gyroscope.py  12_constrained_systems.py  13_hamiltonian_formulation.py  15_energy_analysis.py  16_phase_space.py  18_export_import.py  19_performance_tuning.py  20_units_and_dimensions.py  21_c++_code_export.py  23_sph_introduction.py  24_sph_wave_tank.py  28_n_body_gravity.py  29_orbital_mechanics.py  README.md  tutorial_01_simple_pendulum.md  tutorial_02_double_pendulum.md  tutorial_03_coupled_oscillators.md  tutorial_04_engineering_systems.md  tutorial_05_atwood_machine.md
kubernetes/: README.md  deployment.yaml  service.yaml
mechanics_dsl/: __init__.py  core.py  rotation_3d.py
paper_figures/: benchmarks.txt
reference/: core.py
schemas/: README.md  config.schema.json  simulation-output.schema.json
scripts/: generate_all_platforms.py  generate_figures.py  generate_qr_codes.py  generate_world_map.py  run_v2_tests.py
(+452 files in other folders)
