[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mechanics-dsl"
version = "0.5.0"
description = "A Domain-Specific Language for Classical Mechanics with symbolic and numerical analysis"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Noah Parsons", email = "nomapa223@gmail.com"}
]
keywords = ["physics", "mechanics", "lagrangian", "hamiltonian", "simulation", "dsl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "sympy>=1.9.0",
    "matplotlib>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "mypy>=0.950",
]
web = [
    "streamlit>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/MechanicsDSL/mechanicsdsl"
Documentation = "https://mechanics-dsl.readthedocs.io"
Repository = "https://github.com/MechanicsDSL/mechanicsdsl"
Issues = "https://github.com/MechanicsDSL/mechanicsdsl/issues"

[project.scripts]
# This points the command line tool to the new folder structure
mechanics-dsl = "mechanics_dsl.core:main"

[tool.setuptools]
packages = ["mechanics_dsl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
